# cointoken_bot

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  lib.rs  main.rs
