[package]
name = "cointoken_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
bpaf = { version = "0.6", features = ["derive"] }

[[bin]]
name="cointoken-cli"
path="./src/cli.rs"